src/objects/Kizuna_Volunteer__c.object
<CustomObject>
    <fields>
        <fullName>ActivityStatus__c</fullName>
        <label>Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <label>About</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <label>CancelReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate_w__c</fullName>
        <formula>NULLVALUE(EndDate__c, StartDate__c)</formula>
        <label>End Date W</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeetPlace__c</fullName>
        <label>Meet Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetTime__c</fullName>
        <inlineHelpText>HH:MM</inlineHelpText>
        <label>Meet Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfCheckin__c</fullName>
        <label>Number Of Checkin</label>
        <summarizedField>Kizuna_Participant__c.NumberOfCheckin__c</summarizedField>
        <summaryForeignKey>Kizuna_Participant__c.Volunteer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfParticipant__c</fullName>
        <label>Number Of Participant</label>
        <summaryFilterItems>
            <field>Kizuna_Participant__c.ParticipateFlag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Kizuna_Participant__c.Volunteer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfPositions__c</fullName>
        <description>募集予定人数</description>
        <label>Number of Positions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentVolunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Volunteer</label>
        <referenceTo>Kizuna_Volunteer__c</referenceTo>
        <relationshipName>SubVolunteers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Kizuna_Request__c</referenceTo>
        <relationshipName>Volunteers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <formula>IF(LEN( TRIM(Request__c) ) &gt; 0,
 NULLVALUE ( Request__r.CandidateName__c , &quot;&quot;) &amp; &quot; 様 / &quot; &amp;   NULLVALUE (  Request__r.Address__c  , &quot;&quot;),
 &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate_w__c</fullName>
        <formula>StartDate__c</formula>
        <label>Start Data W</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <inlineHelpText>HH:MM</inlineHelpText>
        <label>Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>EndDate_w__c - StartDate_w__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lat__c</fullName>
        <label>Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lng__c</fullName>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>V-Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Requester__c</columns>
        <columns>StartDate__c</columns>
        <columns>Term__c</columns>
        <columns>NumberOfParticipant__c</columns>
        <columns>NumberOfCheckin__c</columns>
        <columns>ActivityStatus__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>V-Event</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CancelReasonCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(CancelReason__c), ISPICKVAL(Status__c, &apos;Cancel&apos;))</errorConditionFormula>
        <errorDisplayField>CancelReason__c</errorDisplayField>
        <errorMessage>Please fill out the reason for the volunteer cancelation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDateCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(EndDate__c)), StartDate__c &gt; EndDate__c)</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>Please collect the end date based on the start date inputed by you.</errorMessage>
    </validationRules>
</CustomObject>